--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My landing page</title>
+  <title>Landing page template</title>
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
   <!-- We need this line below for responsiveness! -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,8 +13,8 @@
   <!-- code a Hero / Banner section -->
   <div class="banner">
     <div class="container">
-        <h1>Le Wagon brings tech skills to creative people!</h1>
-        <p>Change your life and learn to code at our campuses around the world.</p>
+        <h1>Here is a banner section</h1>
+        <p>And now its tag line!</p>
         <div class="btn-primary" hre="#">Learn more</div>
     </div>
   </div>
@@ -32,13 +32,13 @@
 
         <div class="card">
           <img src="images/learn.svg" alt="learn">
-          <h4>Learn to code</h4>
+          <h4>Learn</h4>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
 
         <div class="card">
           <img src="images/product.svg" alt="product">
-          <h4>Build products</h4>
+          <h4>Build</h4>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
@@ -50,7 +50,7 @@
       <a href="#"><i class="fab fa-fw fa-github"></i></a>
       <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
       <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
-      <p>This website was coded with <i class="fas fa-heart"></i> by a le Wagon student <i class="far fa-smile"></i></p>
+      <p>This website was coded with <i class="fas fa-heart"></i> by yours truly <i class="far fa-smile"></i></p>
     </div>
   </div>
 
